icon styling corrections and spacing

--- a/webpack/style.less
+++ b/webpack/style.less
@@ -65,7 +65,12 @@
         font-weight: bold;
     }
 
+    .fc-footer-toolbar {
+        margin-top: 1em;
+    }
+
     .fc-header-toolbar {
+        margin-bottom: 1em;
         height: 3em;
     }
 
@@ -301,7 +306,7 @@
     animation: spin 1s linear infinite;
     z-index: 100;
     float: right;
-    margin-top: -3.5em;
+    margin-top: -5.5em;
     margin-right: .75em;
 }
 
